--- a/client.html
+++ b/client.html
@@ -50,6 +50,11 @@
             },
             xaxis: {
                 type: 'datetime'
+            },
+            yaxis: {
+                min: 0,
+                max: 500,
+                tickAmount: 5
             }
         });
         transaction.render();
